language/move-lang/tests/move_check/typing/invalid_type_acquire.exp
error[E03006]: unexpected name in this position
   ┌─ tests/move_check/typing/invalid_type_acquire.move:18:9
   │
18 │         T,
   │         ^ Invalid acquires item. Expected a struct name, but got a type parameter

error[E03006]: unexpected name in this position
   ┌─ tests/move_check/typing/invalid_type_acquire.move:19:9
   │
19 │         u64,
   │         ^^^ Invalid acquires item. Expected a struct name, but got a builtin type

error[E02011]: invalid 'acquires' item
   ┌─ tests/move_check/typing/invalid_type_acquire.move:20:9
   │
 4 │     struct R has key, store {}
   │            - The struct 'R' was not declared in the current module. Global storage access is internal to the module'
   ·
20 │         X::R,
   │         ^^^^ Invalid acquires item

error[E02011]: invalid 'acquires' item
   ┌─ tests/move_check/typing/invalid_type_acquire.move:21:9
   │
10 │     struct S has store {}
   │            - Declared without the 'key' ability here
   ·
21 │         S,
   │         ^ Invalid acquires item. Expected a struct with the 'key' ability.

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:30:9 ───
    │
 30 │         destroy(account, move_from(a));
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Could not infer this type. Try adding an annotation
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:30:26 ───
    │
 30 │         destroy(account, move_from(a));
    │                          ^^^^^^^^^^^^ Could not infer this type. Try adding an annotation
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:31:26 ───
    │
 31 │         destroy(account, move_from<T>(a));
    │                          ^^^^^^^^^^^^^^^ Invalid call to move_from.
    ·
 31 │         destroy(account, move_from<T>(a));
    │                                    - Expected a struct type. Global storage operations are restricted to struct types declared in the current module. Found the type parameter: 'T'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:32:26 ───
    │
 32 │         destroy(account, move_from<u64>(a));
    │                          ^^^^^^^^^^^^^^^^^ Invalid call of 'move_from'
    ·
 32 │         destroy(account, move_from<u64>(a));
    │                                    --- The type 'u64' does not have the ability 'key'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:33:26 ───
    │
 33 │         destroy(account, move_from<X::R>(a));
    │                          ^^^^^^^^^^^^^^^^^^ Invalid call to move_from.
    ·
 33 │         destroy(account, move_from<X::R>(a));
    │                                    ---- The type '0x2::X::R' was not declared in the current module. Global storage access is internal to the module'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:34:26 ───
    │
 34 │         destroy(account, move_from<S>(a));
    │                          ^^^^^^^^^^^^^^^ Invalid call of 'move_from'
    ·
 34 │         destroy(account, move_from<S>(a));
    │                                    - The type '0x2::M::S' does not have the ability 'key'
    ·
 10 │     struct S has store {}
    │            - To satisfy the constraint, the 'key' ability would need to be added here
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:34:26 ───
    │
 34 │         destroy(account, move_from<S>(a));
    │                          ^^^^^^^^^^^^^^^ Invalid call to move_from.
    ·
 34 │         destroy(account, move_from<S>(a));
    │                                    - The call acquires '0x2::M::S', but the 'acquires' list for the current function does not contain this type. It must be present in the calling context's acquires list
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:36:9 ───
    │
 36 │         borrow_global(a);
    │         ^^^^^^^^^^^^^^^^ Could not infer this type. Try adding an annotation
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:37:9 ───
    │
 37 │         borrow_global<T>(a);
    │         ^^^^^^^^^^^^^^^^^^^ Invalid call to borrow_global.
    ·
 37 │         borrow_global<T>(a);
    │                       - Expected a struct type. Global storage operations are restricted to struct types declared in the current module. Found the type parameter: 'T'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:38:9 ───
    │
 38 │         borrow_global<u64>(a);
    │         ^^^^^^^^^^^^^^^^^^^^^ Invalid call of 'borrow_global'
    ·
 38 │         borrow_global<u64>(a);
    │                       --- The type 'u64' does not have the ability 'key'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:39:9 ───
    │
 39 │         borrow_global<X::R>(a);
    │         ^^^^^^^^^^^^^^^^^^^^^^ Invalid call to borrow_global.
    ·
 39 │         borrow_global<X::R>(a);
    │                       ---- The type '0x2::X::R' was not declared in the current module. Global storage access is internal to the module'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:40:9 ───
    │
 40 │         borrow_global<S>(a);
    │         ^^^^^^^^^^^^^^^^^^^ Invalid call of 'borrow_global'
    ·
 40 │         borrow_global<S>(a);
    │                       - The type '0x2::M::S' does not have the ability 'key'
    ·
 10 │     struct S has store {}
    │            - To satisfy the constraint, the 'key' ability would need to be added here
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:40:9 ───
    │
 40 │         borrow_global<S>(a);
    │         ^^^^^^^^^^^^^^^^^^^ Invalid call to borrow_global.
    ·
 40 │         borrow_global<S>(a);
    │                       - The call acquires '0x2::M::S', but the 'acquires' list for the current function does not contain this type. It must be present in the calling context's acquires list
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:42:9 ───
    │
 42 │         borrow_global_mut(a);
    │         ^^^^^^^^^^^^^^^^^^^^ Could not infer this type. Try adding an annotation
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:43:9 ───
    │
 43 │         borrow_global_mut<T>(a);
    │         ^^^^^^^^^^^^^^^^^^^^^^^ Invalid call to borrow_global_mut.
    ·
 43 │         borrow_global_mut<T>(a);
    │                           - Expected a struct type. Global storage operations are restricted to struct types declared in the current module. Found the type parameter: 'T'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:44:9 ───
    │
 44 │         borrow_global_mut<u64>(a);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of 'borrow_global_mut'
    ·
 44 │         borrow_global_mut<u64>(a);
    │                           --- The type 'u64' does not have the ability 'key'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:45:9 ───
    │
 45 │         borrow_global_mut<X::R>(a);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call to borrow_global_mut.
    ·
 45 │         borrow_global_mut<X::R>(a);
    │                           ---- The type '0x2::X::R' was not declared in the current module. Global storage access is internal to the module'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:46:9 ───
    │
 46 │         borrow_global_mut<S>(a);
    │         ^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of 'borrow_global_mut'
    ·
 46 │         borrow_global_mut<S>(a);
    │                           - The type '0x2::M::S' does not have the ability 'key'
    ·
 10 │     struct S has store {}
    │            - To satisfy the constraint, the 'key' ability would need to be added here
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:46:9 ───
    │
 46 │         borrow_global_mut<S>(a);
    │         ^^^^^^^^^^^^^^^^^^^^^^^ Invalid call to borrow_global_mut.
    ·
 46 │         borrow_global_mut<S>(a);
    │                           - The call acquires '0x2::M::S', but the 'acquires' list for the current function does not contain this type. It must be present in the calling context's acquires list
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:48:9 ───
    │
 48 │         exists(a);
    │         ^^^^^^^^^ Could not infer this type. Try adding an annotation
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:49:9 ───
    │
 49 │         exists<T>(a);
    │         ^^^^^^^^^^^^ Invalid call to exists.
    ·
 49 │         exists<T>(a);
    │                - Expected a struct type. Global storage operations are restricted to struct types declared in the current module. Found the type parameter: 'T'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:50:9 ───
    │
 50 │         exists<u64>(a);
    │         ^^^^^^^^^^^^^^ Invalid call of 'exists'
    ·
 50 │         exists<u64>(a);
    │                --- The type 'u64' does not have the ability 'key'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:51:9 ───
    │
 51 │         exists<X::R>(a);
    │         ^^^^^^^^^^^^^^^ Invalid call to exists.
    ·
 51 │         exists<X::R>(a);
    │                ---- The type '0x2::X::R' was not declared in the current module. Global storage access is internal to the module'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:52:9 ───
    │
 52 │         exists<S>(a);
    │         ^^^^^^^^^^^^ Invalid call of 'exists'
    ·
 52 │         exists<S>(a);
    │                - The type '0x2::M::S' does not have the ability 'key'
    ·
 10 │     struct S has store {}
    │            - To satisfy the constraint, the 'key' ability would need to be added here
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:54:9 ───
    │
 54 │         move_to(account, any());
    │         ^^^^^^^^^^^^^^^^^^^^^^^ Could not infer this type. Try adding an annotation
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:54:26 ───
    │
 54 │         move_to(account, any());
    │                          ^^^^^ Could not infer this type. Try adding an annotation
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:55:9 ───
    │
 55 │         move_to<T>(account, any());
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call to move_to.
    ·
 55 │         move_to<T>(account, any());
    │                 - Expected a struct type. Global storage operations are restricted to struct types declared in the current module. Found the type parameter: 'T'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:56:9 ───
    │
 56 │         move_to<u64>(account, any());
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of 'move_to'
    ·
 56 │         move_to<u64>(account, any());
    │                 --- The type 'u64' does not have the ability 'key'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:57:9 ───
    │
 57 │         move_to<X::R>(account, any());
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call to move_to.
    ·
 57 │         move_to<X::R>(account, any());
    │                 ---- The type '0x2::X::R' was not declared in the current module. Global storage access is internal to the module'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:58:9 ───
    │
 58 │         move_to<S>(account, any());
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of 'move_to'
    ·
 58 │         move_to<S>(account, any());
    │                 - The type '0x2::M::S' does not have the ability 'key'
    ·
 10 │     struct S has store {}
    │            - To satisfy the constraint, the 'key' ability would need to be added here
    │

